# Hazel

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Docs/ADR/: 0001-asset-domain-boundary.md  0002-asset-path-policy.md  0003-asset-manager-internal-components.md  0004-user-asset-api-boundary.md  0005-supported-file-asset-types.md
Docs/Architecture/: AssetSystem.md
Docs/ChangeLog/: asset-system-changelog.md
Hazel/: CMakeLists.txt  Hazel.h
Hazel/src/: Hazel.h  Hazelpch.cpp  Hazelpch.h
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h  input.h
Hazel/src/Hazel/Asset/: Asset.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h  AssetPath.cpp  AssetPath.h  AssetRegistry.cpp  AssetRegistry.h  AssetSerializer.h  AssetTypes.h  EngineAssets.cpp  EngineAssets.h  ShaderAsset.h  ShaderSerializer.cpp  ShaderSerializer.h  TextureAsset.h  TextureSerializer.cpp  TextureSerializer.h  UserAssetManager.cpp  UserAssetManager.h
Hazel/src/Hazel/Asset/Internal/: AssetHandleAllocator.cpp  AssetHandleAllocator.h  AssetRootLocator.cpp  AssetRootLocator.h  AssetRuntimeCache.cpp  AssetRuntimeCache.h  AssetSerializerRegistry.cpp  AssetSerializerRegistry.h  AssetSystemFileResolver.cpp  AssetSystemFileResolver.h
Hazel/src/Hazel/Asset/Runtime/: ShaderAsset.h  TextureAsset.h
Hazel/src/Hazel/Asset/Serialization/: AssetSerializer.h  ShaderSerializer.cpp  ShaderSerializer.h  TextureSerializer.cpp  TextureSerializer.h
Hazel/src/Hazel/Assets/Shaders/: Quad.glsl
Hazel/src/Hazel/Controllers/: OrthographicCameraController.cpp  OrthographicCameraController.h
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Containers.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Ref.h  Scope.h  Timestep.h  Window.h
Hazel/src/Hazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Hazel/src/Hazel/ImGui/: ImGuiBuild.cpp  ImGuiConfig.h  ImGuiLayer.cpp  ImGuiLayer.h
Hazel/src/Hazel/Project/: Project.cpp  Project.h
Hazel/src/Hazel/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Hazel/src/Hazel/SpdlogFormatters/: EventFormatters.h  GLMFormatters.h
Hazel/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Hazel/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt
Sandbox/assets/Shaders/: FlatColor.glsl  Texture.glsl
Sandbox/src/: GameConfig.h  GameLayer.cpp  GameLayer.h  Level.cpp  Level.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h
